<resources>
    <string name="app_name">GuideME</string>
    <string name="loader_text">Logo</string>
    <string name="button_to_cycle">1. to life cycle</string>
    <string name="button_to_click">2 events </string>
    <string name="button_to_android_extensions">3 extensions</string>
    <string name="button_to_picasso">4 picasso</string>
    <string name="button_to_intents">6 intents</string>
    <string name="button_to_list_views">5 list views</string>
    <string name="button_to_permissions">7 permissions</string>
    <string name="button_to_preferences">8 preferences</string>
    <string name="button_to_extension_functions">9 Extension functions</string>

    <string name="buttonXML">Boton XML</string>
    <string name="buttonInLine">Boton In Line</string>
    <string name="buttonMulti1">Boton Muti 1</string>
    <string name="buttonMulti2">Boton Muti 2</string>
    <string name="buttonMulti3">Boton Muti 3</string>

    <string name="buttonbyID">Boton By ID</string>
    <string name="buttonKAT">Boton By KAT</string>

    <string name="buttonIntentObject">Boton Intent Object</string>
    <string name="buttonIntentEx">Boton Intent Extras</string>
    <string name="buttonIntentFlags">Boton Intent Flags</string>

    <string name="buttonback">go Back</string>


</resources>
